Changes claude made troubleshooting the deployment process

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "start": "node src/index.js",
+    "build": "webpack --mode=production",
     "dev": "node --watch src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "validate": "node scripts/validate-technical-assumptions.js",
