feat: add transcript summarization and title generation
- Add SummarizationService using Groq API for intelligent transcript summaries
- Add TitleGenerationService for automatic title generation from transcripts
- Create SummaryViewer frontend component for displaying summaries
- Add /summary command to CommandHandler for accessing summaries
- Integrate summarization into post-recording workflow
- Add summary endpoints to ExpressServer
- Include title metadata storage and retrieval
- Add comprehensive error handling and fallback mechanisms

This feature automatically generates meaningful titles and detailed summaries
from voice recordings, enhancing content discoverability and team collaboration.

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,8 @@ yarn-error.log*
 recordings/
 temp/
 
-# Build outputs
-public/bundle.js
-public/bundle.js.map
-public/bundle.js.LICENSE.txt
+# Build outputs (entire directory is generated)
+public/
 
 # OS files
 .DS_Store
@@ -51,3 +49,15 @@ logs/
 # Misc
 *.tgz
 *.tar.gz
+
+# AI/Development tooling directories - DO NOT COMMIT THESE!
+.bmad-core/
+.claude/
+.gemini/
+.roomodes
+.cursor/
+.aider/
+.continue/
+
+# Build artifacts that should be generated, not committed
+# (public/ directory is already ignored above)
