--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "soundscribe",
   "version": "1.0.0",
   "main": "src/index.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node src/index.js",
     "build": "webpack --mode=production",
     "dev": "node --watch src/index.js",
-    "setup": "node scripts/setup.js"
+    "setup": "node scripts/setup.js",
+    "lint": "eslint src/ scripts/",
+    "lint:fix": "eslint src/ scripts/ --fix"
   },
   "keywords": [
     "discord",
@@ -35,10 +40,10 @@
     "discord.js": "^14.21.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.0.0",
+    "express-rate-limit": "^8.0.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
-    "form-data": "^4.0.3",
+    "form-data": "^4.0.4",
     "helmet": "^8.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jsonwebtoken": "^9.0.2",
@@ -51,5 +56,11 @@
     "uuid": "^11.1.0",
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.31.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0"
   }
 }
