feat(recording): consolidate speech segments and tune transcription padding
Introduce smarter speech-segment processing to improve transcript
accuracy and downstream title/summary generation.

• Add generateRawSpeechSegments and consolidateSpeechSegments to
  VoiceRecorder for merging adjacent utterances by the same speaker and
  filtering out clips shorter than 1 s
• Adapt TranscriptionService to apply dynamic end-padding based on gap
  before the speaker’s next segment, reducing overlap artifacts
• Relocate transcript viewer link and public completion message logic
  from CommandHandler to stop command for clearer ownership
• Harden error handling, logging and config parsing across affected
  modules

These changes yield fewer, cleaner segments, better Whisper results and
a more informative Discord completion message.

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ logs/
 
 # Build artifacts that should be generated, not committed
 # (public/ directory is already ignored above)
+docs/audio_processing_analysis.md
